--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- HEADER -->
     <header>
       <nav>
-        <a href="">webstudio </a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -18,9 +18,11 @@
       </nav>
       <address>
         <ul>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -32,6 +34,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2 hidden>Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -68,7 +71,7 @@
         <ul>
           <li>
             <img
-              src="/images/img-1.jpg"
+              src="./images/img-1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -78,7 +81,7 @@
           </li>
           <li>
             <img
-              src="/images/img-2.jpg"
+              src="./images/img-2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -88,7 +91,7 @@
           </li>
           <li>
             <img
-              src="/images/img-3.jpg"
+              src="./images/img-3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -98,7 +101,7 @@
           </li>
           <li>
             <img
-              src="/images/img-4.jpg"
+              src="./images/img-4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -111,7 +114,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-      <a href=""> webstudio </a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
